--- a/web/public/push_test.html
+++ b/web/public/push_test.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
-<html lang="ja">
+<!--
+Copyright (c) 2016 Google Inc.
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+http://www.apache.org/licenses/LICENSE-2.0
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+-->
+<html>
 <head>
     <meta charset=utf-8 />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,8 +27,6 @@
     <link rel="manifest" href="/manifest.json">
 </head>
 <body>
-<h1>ウェブPUSHをテスト</h1>
-
 <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
     <!-- Header section containing title -->
@@ -59,19 +69,13 @@
     </main>
 </div>
 
-
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="/__/firebase/7.21.0/firebase-app.js"></script>
-
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="/__/firebase/7.21.0/firebase-analytics.js"></script>
-<script src="/__/firebase/7.21.0/firebase-messaging.js"></script>
-
-<!-- Initialize Firebase -->
+<!-- Import and configure the Firebase SDK -->
+<!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
+<!-- If you do not serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
+<script src="/__/firebase/7.21.1/firebase-app.js"></script>
+<script src="/__/firebase/7.21.1/firebase-messaging.js"></script>
 <script src="/__/firebase/init.js"></script>
 
-<!-- WebPush受付コーディング -->
 <script>
     // [START get_messaging_object]
     // Retrieve Firebase Messaging object.
@@ -128,6 +132,7 @@
         // Get Instance ID token. Initially this makes a network call, once retrieved
         // subsequent calls to getToken will return from cache.
         messaging.getToken().then((currentToken) => {
+            console.log("Success to get token : " + currentToken)
             if (currentToken) {
                 sendTokenToServer(currentToken);
                 updateUIForPushEnabled(currentToken);
@@ -165,6 +170,7 @@
             console.log('Token already sent to server so won\'t send it again ' +
                 'unless it changes');
         }
+
     }
 
     function isTokenSentToServer() {
